# core/src/gen/api/main/java/io/parrot/api/ProcessorsApi.java
@@ -7,6 +7,8 @@ import io.swagger.jaxrs.*;
 
 import io.parrot.api.model.ErrorApi;
 import io.parrot.api.model.ParrotProcessorApi;
+import io.parrot.api.model.ParrotProcessorClusterApi;
+import io.parrot.api.model.ParrotProcessorNodeApi;
 import io.parrot.api.model.ParrotProcessorsApi;
 
 import java.util.List;
@@ -30,12 +32,12 @@ public interface ProcessorsApi  {
     
     
     @Produces({ "application/json" })
-    @io.swagger.annotations.ApiOperation(value = "Parrot Processor creation", notes = "Creates a new Parrot Processor", response = ParrotProcessorApi.class, tags={  })
+    @io.swagger.annotations.ApiOperation(value = "Parrot Processor creation", notes = "Adds a new Parrot Processor", response = ParrotProcessorApi.class, tags={  })
     @io.swagger.annotations.ApiResponses(value = { 
         @io.swagger.annotations.ApiResponse(code = 200, message = "The created Processor", response = ParrotProcessorApi.class),
         
         @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorApi.class) })
-    public Response createProcessor(@ApiParam(value = "Processor definition" ,required=true) ParrotProcessorApi processor,@Context SecurityContext securityContext);
+    public Response addProcessor(@ApiParam(value = "Processor definition" ,required=true) ParrotProcessorApi processor,@Context SecurityContext securityContext);
     @DELETE
     @Path("/{id}")
     
@@ -57,6 +59,16 @@ public interface ProcessorsApi  {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorApi.class) })
     public Response getProcessor( @PathParam("id") String id,@Context SecurityContext securityContext);
     @GET
+    @Path("/{id}/cluster")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Gets the Processor cluster current composition", notes = "Gets the Processor cluster current composition", response = ParrotProcessorClusterApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The Processor cluster composition", response = ParrotProcessorClusterApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorClusterApi.class) })
+    public Response getProcessorCluster( @PathParam("id") String id,@Context SecurityContext securityContext);
+    @GET
     
     
     @Produces({ "application/json" })
@@ -66,6 +78,56 @@ public interface ProcessorsApi  {
         
         @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorsApi.class) })
     public Response getProcessors(@Context SecurityContext securityContext);
+    @POST
+    @Path("/{id}/restart")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Restarts a Parrot Processor", notes = "Restarts a Parrot Processor", response = ParrotProcessorApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The restarted Parrot Processor", response = ParrotProcessorApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorApi.class) })
+    public Response restartProcessor( @PathParam("id") String id,@Context SecurityContext securityContext);
+    @POST
+    @Path("/{id}/start")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Starts a Parrot Processor", notes = "Starts a Parrot Processor", response = ParrotProcessorApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The started Parrot Processor", response = ParrotProcessorApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorApi.class) })
+    public Response startProcessor( @PathParam("id") String id,@Context SecurityContext securityContext);
+    @POST
+    @Path("/{id}/cluster/{node}/start")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Starts a Parrot Processor node", notes = "Starts a Parrot Processor node", response = ParrotProcessorNodeApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The started Parrot Processor node", response = ParrotProcessorNodeApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorNodeApi.class) })
+    public Response startProcessorNode( @PathParam("id") String id, @PathParam("node") String node,@Context SecurityContext securityContext);
+    @POST
+    @Path("/{id}/stop")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Stops a Parrot Processor", notes = "Stops a Parrot Processor", response = ParrotProcessorApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The stopped Parrot Processor", response = ParrotProcessorApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorApi.class) })
+    public Response stopProcessor( @PathParam("id") String id,@Context SecurityContext securityContext);
+    @POST
+    @Path("/{id}/cluster/{node}/stop")
+    
+    @Produces({ "application/json" })
+    @io.swagger.annotations.ApiOperation(value = "Stops a Parrot Processor node", notes = "Stops a Parrot Processor node", response = ParrotProcessorNodeApi.class, tags={  })
+    @io.swagger.annotations.ApiResponses(value = { 
+        @io.swagger.annotations.ApiResponse(code = 200, message = "The stopped Parrot Processor node", response = ParrotProcessorNodeApi.class),
+        
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Unexpected error", response = ParrotProcessorNodeApi.class) })
+    public Response stopProcessorNode( @PathParam("id") String id, @PathParam("node") String node,@Context SecurityContext securityContext);
     @PUT
     @Path("/{id}")
     
