# core/src/gen/api/main/java/io/parrot/api/model/ParrotProcessorStatusApi.java
@@ -1,85 +1,0 @@
-package io.parrot.api.model;
-
-import java.util.Objects;
-import java.util.ArrayList;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import javax.validation.constraints.*;
-import io.swagger.annotations.*;
-
-
-
-public class ParrotProcessorStatusApi   {
-  
-  private String id = null;
-  private String status = null;
-
-  /**
-   * Processor id.
-   **/
-  
-  @ApiModelProperty(example = "null", required = true, value = "Processor id.")
-  @JsonProperty("id")
-  @NotNull
-  public String getId() {
-    return id;
-  }
-  public void setId(String id) {
-    this.id = id;
-  }
-
-  /**
-   * The processor status in the cluster (STARTED, STOPPED)
-   **/
-  
-  @ApiModelProperty(example = "null", value = "The processor status in the cluster (STARTED, STOPPED)")
-  @JsonProperty("status")
-  public String getStatus() {
-    return status;
-  }
-  public void setStatus(String status) {
-    this.status = status;
-  }
-
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    ParrotProcessorStatusApi parrotProcessorStatus = (ParrotProcessorStatusApi) o;
-    return Objects.equals(id, parrotProcessorStatus.id) &&
-        Objects.equals(status, parrotProcessorStatus.status);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(id, status);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class ParrotProcessorStatusApi {\n");
-    
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    status: ").append(toIndentedString(status)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
