# core/src/main/java/io/parrot/processor/ParrotRouteBuilder.java
@@ -6,15 +6,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import io.parrot.api.model.ParrotProcessorApi;
+import io.parrot.api.model.ParrotProcessorApi.StatusEnum;
 import io.parrot.debezium.event.data.ChangeEventData;
 import io.parrot.source.PostgreSqlSource;
 
 public class ParrotRouteBuilder extends RouteBuilder {
 
 	Logger LOG = LoggerFactory.getLogger(ParrotRouteBuilder.class);
-
-	String configurationError;
-	boolean configured = false;
 
 	ParrotProcessorApi processor;
 
@@ -29,29 +27,20 @@ public class ParrotRouteBuilder extends RouteBuilder {
 					+ getProcessor().getSource().getBootstrapServers()
 					+ "&clientId=parrot.dequeue&groupId=parrot1234&autoOffsetReset=earliest&consumersCount=1&consumerStreams=1";
 
-			from(kafkaEndpoint).id(getProcessor().getId()).convertBodyTo(ChangeEventData.class)
+			boolean autoStartup = StatusEnum.STARTED.compareTo(processor.getStatus()) == 0;
+
+			from(kafkaEndpoint).id(getProcessor().getId()).autoStartup(autoStartup).convertBodyTo(ChangeEventData.class)
 					.idempotentConsumer(body().method(""))
 					.messageIdRepository(new KafkaIdempotentRepository("parrot.idempotent.repository",
 							getProcessor().getSource().getBootstrapServers()))
 					.bean(PostgreSqlSource.class).to("stream:out");
-			configured = true;
 		} catch (Exception e) {
-			configurationError = "Unable to create Processor's route '" + getProcessor().getId() + "': "
-					+ e.getMessage();
-			LOG.error(configurationError);
-
+			LOG.error("Unable to create Processor's route '" + getProcessor().getId() + "': " + e.getMessage());
 		}
-	}
-
-	public String getConfigurationError() {
-		return configurationError;
-	}
-
-	public boolean isConfigured() {
-		return configured;
 	}
 
 	public ParrotProcessorApi getProcessor() {
 		return processor;
 	}
+
 }
