# core/src/main/resources/swagger/api.yaml
@@ -29,13 +29,13 @@ info:
     | Column1 | Collumn2 |
     | ------- | -------- |
     | cell1   | cell2    |
-  version: "0.1.0"
+  version: 0.1.0
 host: parrot:8080
 schemes:
-  - http
+- http
 basePath: /parrot
 produces:
-  - application/json
+- application/json
 paths:
   /processors:
     get:
@@ -52,11 +52,11 @@ paths:
           schema:
             $ref: '#/definitions/Error'
     post:
-      operationId: createProcessor
+      operationId: addProcessor
       summary: Parrot Processor creation
-      description: Creates a new Parrot Processor
+      description: Adds a new Parrot Processor
       parameters:
-        - $ref: '#/parameters/processor'
+      - $ref: '#/parameters/processor'
       responses:
         200:
           description: The created Processor
@@ -72,7 +72,7 @@ paths:
       summary: A Parrot Processors
       description: Gets the configuration info for a Parrot Processor
       parameters:
-        - $ref: '#/parameters/id'
+      - $ref: '#/parameters/id'
       responses:
         200:
           description: The configuration info for a Parrot Processor
@@ -87,8 +87,8 @@ paths:
       summary: Parrot Processor update
       description: Updates a Parrot Processor
       parameters:
-        - $ref: '#/parameters/id'
-        - $ref: '#/parameters/processor'
+      - $ref: '#/parameters/id'
+      - $ref: '#/parameters/processor'
       responses:
         200:
           description: The updated Parrot Processor
@@ -103,10 +103,108 @@ paths:
       summary: Parrot Processor delete
       description: Deletes a Parrot Processor
       parameters:
-        - $ref: '#/parameters/id'
+      - $ref: '#/parameters/id'
       responses:
         200:
           description: If the Parrot Processor had been successfully deleted
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/cluster:
+    get:
+      operationId: getProcessorCluster
+      summary: Gets the Processor cluster current composition
+      description: Gets the Processor cluster current composition
+      parameters:
+      - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: The Processor cluster composition
+          schema:
+            $ref: '#/definitions/ParrotProcessorCluster'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/cluster/{node}/start:
+    post:
+      operationId: startProcessorNode
+      summary: Starts a Parrot Processor node
+      description: Starts a Parrot Processor node
+      parameters:
+      - $ref: '#/parameters/id'
+      - $ref: '#/parameters/node'
+      responses:
+        200:
+          description: The started Parrot Processor node
+          schema:
+            $ref: '#/definitions/ParrotProcessorNode'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/cluster/{node}/stop:
+    post:
+      operationId: stopProcessorNode
+      summary: Stops a Parrot Processor node
+      description: Stops a Parrot Processor node
+      parameters:
+      - $ref: '#/parameters/id'
+      - $ref: '#/parameters/node'
+      responses:
+        200:
+          description: The stopped Parrot Processor node
+          schema:
+            $ref: '#/definitions/ParrotProcessorNode'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/start:
+    post:
+      operationId: startProcessor
+      summary: Starts a Parrot Processor
+      description: Starts a Parrot Processor
+      parameters:
+      - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: The started Parrot Processor
+          schema:
+            $ref: '#/definitions/ParrotProcessor'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/stop:
+    post:
+      operationId: stopProcessor
+      summary: Stops a Parrot Processor
+      description: Stops a Parrot Processor
+      parameters:
+      - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: The stopped Parrot Processor
+          schema:
+            $ref: '#/definitions/ParrotProcessor'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /processors/{id}/restart:
+    post:
+      operationId: restartProcessor
+      summary: Restarts a Parrot Processor
+      description: Restarts a Parrot Processor
+      parameters:
+      - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: The restarted Parrot Processor
+          schema:
+            $ref: '#/definitions/ParrotProcessor'
         default:
           description: Unexpected error
           schema:
@@ -126,11 +224,11 @@ paths:
           schema:
             $ref: '#/definitions/Error'
     post:
-      operationId: createSink
+      operationId: addSink
       summary: Parrot Sink creation
-      description: Creates a new Parrot Sink
+      description: Adds a new Parrot Sink
       parameters:
-        - $ref: '#/parameters/sink'
+      - $ref: '#/parameters/sink'
       responses:
         200:
           description: The created Sink
@@ -146,7 +244,7 @@ paths:
       summary: A Parrot Sink
       description: Gets the configuration info for a Parrot Sink
       parameters:
-        - $ref: '#/parameters/id'
+      - $ref: '#/parameters/id'
       responses:
         200:
           description: The configuration info for a Parrot Sink
@@ -161,10 +259,10 @@ paths:
       summary: Parrot Sink update
       description: Updates an existing Sink
       parameters:
-        - $ref: '#/parameters/id'
-        - $ref: '#/parameters/sink'
+      - $ref: '#/parameters/id'
+      - $ref: '#/parameters/sink'
       tags:
-        - galeve
+      - galeve
       responses:
         200:
           description: The updated Sink
@@ -174,73 +272,67 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-            
 definitions:
-  ParrotNode:
-    type: object
-    required:
-      - id
-      - hostname
-    properties:
-      id:
-        type: integer
-        format: int32
-        description: Parrot Node id.
-      hostname:
-        type: string
-        description: Parrot Node hostname.
   ParrotProcessor:
     type: object
     required:
-      - id
-      - source
-      - sink
+    - id
+    - source
+    - sink
     properties:
       id:
         type: string
-        description: Processor id.
+        description: Processor's ID.
       source:
         $ref: '#/definitions/ParrotSource'
       sink:
         $ref: '#/definitions/ParrotSink'
       status:
-        type:
+        type: string
         enum:
-          - "STARTED"
-          - "STOPPED"
+        - STARTED
+        - STOPPED
+  ParrotProcessorNode:
+    type: object
+    required:
+    - id
+    - node
+    properties:
+      id:
+        type: string
+        description: Processor's ID.
+      node:
+        type: string
+        description: Processor Node's ID
+      status:
+        type: string
+        enum:
+        - STARTED
+        - STOPPED
+  ParrotProcessorCluster:
+    type: array
+    items:
+      $ref: '#/definitions/ParrotProcessorNode'
   ParrotProcessors:
     type: array
     items:
       $ref: '#/definitions/ParrotProcessor'
-  ParrotProcessorStatus:
-    type: object
-    required:
-      - id
-    properties:
-      id:
-        type: string
-        description: Processor id.
-      status:
-        type: string
-        description: The processor status in the cluster (STARTED, STOPPED)
   ParrotSource:
     type: object
     required:
-      - logical.name
-      - source.class
-      - bootstrap.servers
+    - logical.name
+    - source.class
+    - bootstrap.servers
     properties:
       logical.name:
         type: string
-        description: This corrisponds to the <b>logical name</b> named of a Debezium Connector. |
-            For example, if the Processor has a PostgreSQL Parrot source, the logical name is the value of the |
-            database.server.name property in the config part of the Debezium Connector.
+        description: This corrisponds to the <b>logical name</b> named of a Debezium Connector. | For example, if the Processor has a PostgreSQL Parrot source, the logical name is the value of the | database.server.name property in the config part of the Debezium Connector.
       source.class:
         type: string
         description: The class which implements the Parrot Processor's Source
       bootstrap.servers:
         type: string
-        description:  A list of host/port pairs to use for establishing the initial connection to the Kafka cluster. The Parrot Processor will make use of all servers irrespective of which servers are specified here for bootstrapping. This list only impacts the initial hosts used to discover the full set of servers. This list should be in the form 'host1:port1,host2:port2,...'. Since these servers are just used for the initial connection to discover the full cluster membership (which may change dynamically), this list need not contain the full set of servers (you may want more than one, though, in case a server is down).
+        description: A list of host/port pairs to use for establishing the initial connection to the Kafka cluster. The Parrot Processor will make use of all servers irrespective of which servers are specified here for bootstrapping. This list only impacts the initial hosts used to discover the full set of servers. This list should be in the form 'host1:port1,host2:port2,...'. Since these servers are just used for the initial connection to discover the full cluster membership (which may change dynamically), this list need not contain the full set of servers (you may want more than one, though, in case a server is down).
       schema.whitelist:
         type: string
         description: Schema whitelist (where supported).
@@ -256,18 +348,18 @@ definitions:
   ParrotSink:
     type: object
     required:
-      - id
+    - id
     properties:
       id:
         type: string
-        description: Sink ID.
+        description: Sink's ID.
       sink.class:
         type: string
         description: The class which implements the Parrot Processor's Sink
   ParrotSinks:
-     type: array
-     items:
-        $ref: '#/definitions/ParrotSink'
+    type: array
+    items:
+      $ref: '#/definitions/ParrotSink'
   Error:
     type: object
     properties:
@@ -276,12 +368,17 @@ definitions:
         format: int32
       message:
         type: string
-        
 parameters:
   id:
     name: id
     in: path
     description: ID
+    required: true
+    type: string
+  node:
+    name: node
+    in: path
+    description: Node ID
     required: true
     type: string
   processor:
